--- a/frontend/src/css/dashboard.css
+++ b/frontend/src/css/dashboard.css
@@ -1,6 +1,13 @@
 .dashboard {
+    background-size: cover;
     height: 100dvh;
     width: 100vw;
+}
+
+.router {
+    background: rgb(255, 255, 255, 0.6);
+    border-radius: 30px;
+    margin: 20px 20px auto;
 }
 
 .navLogo {
