--- a/frontend/src/css/dashboard.css
+++ b/frontend/src/css/dashboard.css
@@ -1,10 +1,23 @@
 .dashboard {
-    height: 100dvh;
+    background-size: cover;
+    height: 100vh;
     width: 100vw;
+}
+
+.outlet {
+    background: rgb(255, 255, 255, 0.6);
+    border-radius: 30px;
+    margin: 0 auto;
+    width: 65%;
+    padding: 2%;
 }
 
 .navLogo {
     height: 3em;
+}
+
+.registerForm {
+    overflow: auto;
 }
 
 .dark .accountAccordion {
