--- a/frontend/src/css/dashboard.css
+++ b/frontend/src/css/dashboard.css
@@ -5,11 +5,16 @@
 }
 
 .outlet {
-    background: rgb(255, 255, 255, 0.6);
+    background: rgb(255, 255, 255, 0.7);
     border-radius: 30px;
-    margin: 0 auto;
-    width: 65%;
+    margin: 1em;
+    width: 90%;
     padding: 2%;
+    box-shadow: 3px 3px 5px var(--box-shadow);
+}
+
+.dark .outlet {
+    background: var(--box-shadow);
 }
 
 .navLogo {
@@ -45,4 +50,9 @@
 
 .accountAmounts :nth-child(1) {
     font-weight: 700;
+}
+
+.dark .menuList {
+    background: var(--box-shadow);
+    color: white;
 }
