--- a/frontend/src/css/dashboard.css
+++ b/frontend/src/css/dashboard.css
@@ -56,3 +56,21 @@
     background: var(--box-shadow);
     color: white;
 }
+
+.transferModal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5em;
+    width: 30em;
+    height: 20em;
+    background-color: white;
+    border-radius: 5px;
+    padding: 1em;
+    box-shadow: 5px 5px 5px var(--box-shadow);
+}
